--- a/Frontend/admin.html
+++ b/Frontend/admin.html
@@ -144,7 +144,7 @@
     </div>
     <script>
         (function () {
-            const API_BASE = window.API_BASE || 'https://datafest-backend.onrender.com';
+            const API_BASE = window.API_BASE || 'https://datafest-backendback.onrender.com';
             const restockTbody = document.getElementById('restock-tbody');
             const restockCount = document.getElementById('restock-count');
             const filterBtn = document.getElementById('filter-btn');
