--- a/Frontend/team.html
+++ b/Frontend/team.html
@@ -129,12 +129,7 @@
         </div>
         <h3 class="text-xl font-bold text-text-light dark:text-text-dark">David Prince</h3>
         <p class="text-sm text-primary font-semibold tracking-wider">AI Engineer</p>
-        <p class="mt-4 text-secondary-text-light dark:text-secondary-text-dark text-sm">
-
-            
-
-
-                </p>
+        <p class="mt-4 text-secondary-text-light dark:text-secondary-text-dark text-sm"> Passionate about building intelligent systems that combine machine learning, computer vision, and embedded technologies.</p>
         </div>
         </div>
         </div>
